# rust-svelte-fullstack

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.rust  docker-compose.yml
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
migration/: 000_init.sql
src/: app.rs  main.rs
src/routes/: user.rs
static_fallback/: 404.html
